# curia-ecs

./: CMakeLists.txt  README.md  delete.txt
include/: archetype.hpp  chunk.hpp  command_buffer.hpp  component.hpp  curia.hpp  entity.hpp  query.hpp  scheduler.hpp  world.hpp
src/: curia.cpp  world.cpp
tests/: basic_tests.cpp  benchmark.cpp
